<resources>
    <string name="app_name">Imgur Gallery</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>


    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="action_order_popularity">popularity</string>
    <string name="action_order_newest_first">newest first</string>
    <string name="action_order_highest_scoring">highest scoring</string>
    <string name="period_dialog_title">Set period</string>
    <string name="most_viral">most viral</string>
    <string name="funny">Funny</string>
    <string name="awesome">Awesome</string>
    <string name="aww">Aww</string>
    <string name="the_more_you_know">The More You Know</string>
    <string name="storytime">Storytime</string>
    <string name="current_events">Current Events</string>
    <string name="design_art"><![CDATA[Design &  Art]]></string>
    <string name="reaction">Reaction</string>
    <string name="error">Ошибка</string>
    <string name="title_activity_image_detail">ImageDetailActivity</string>

    <string name="hello_world">Hello world!</string>
</resources>
